adicionado formulario contato

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <section class="sobre">
     <div class="foto">
         <div class="fundo">
-            <img src="c:\Users\Pc002\Downloads\messi-removebg-preview.png">
+            <img src="c:\Users\Pc002\Downloads\messi-removebg-preview.png
             ">
         </div>
     </div>
@@ -61,5 +61,26 @@
         <P>Moro em apiúna/sc no ribeirão são luís e estudo na escola basica de educação são joão bosco </P>
     </article>
 </section>
+<section class="contato">
+
+    <div class="botoess">
+        <button>Github</button>
+        <button>Instagram</button>
+        <button>linkedin</button>
+        <button>whatsapp</button>
+    </div>
+    <article>
+        <h1>CONTATOS</h1>
+        <p> caso queira entrar em contato,preecha o formulário abaixo</p>
+        <form>
+            <input type="text" placeholder="nome completo">
+            <input type="text" placeholder="endereço de e-mail">
+            <input type="text" placeholder="telefone com ddd">
+            <input type="text" placeholder="assunto"> 
+        </form> 
+    </article>
+</section>
+
+<body>
 
 </html>
